    - Removed property "surplusSalaryTotal"
    - Added mandatory property "payrollEmployees"
    - Added restriction for allowed enum values for "deathCapitalUVG" and "deathCapitalSurplus"
    - Added restriction for allowed enum values for "disabilityCapitalUVG" and "disabilityCapitalSurplusSalary"
    - property "numberOfPersonsTotal" is now optional
- YearlySalaryMultipleType (Changed)
    - translated and added enum values
- YearlySalaryOptionalMultipleType (Removed)

### Version 0.4.0 (05.11.2024)
Version 0.3.0 only included properties for KTG. This version expands the Standard to additionally
 allow transmission of data for UVGO and UVGZ.

- AnnualCancellationType (Removed)
- AHVSalaryMultipleType (Added)
- BenefitCoverageType (Removed)
- BenefitPeriodType (Added)
    - Moved from generics
- CoverageType (Changed)
    - Added validation so at least one of the properties must be set
- DailyAllowanceType (Added)
- DailyHospitalAllowanceType (Added)
- DeathCapitalType (Added)
- DisabilityCapitalType (Added)
- DSBMCoverageType (Changed)
    - changed type to array
    - added property "maximumPayrollAmount"
- DSBPayrollFemaleType (Removed)
- DSBPayrollMaleType (Removed)
- DSBPCoverageType (Changed)
    - changed type to array
    - added property "maximumPayrollAmount"
- DSBPremiumType (Added)
- DSPTypePayInstallmentType (Renamed)
    - Renamed to "payInstalmentType"
- FixedPayrollType (Removed)
- InsuranceDurationInYears (Changed)
    - Restricted values to enum
- InsuranceTypeType (Removed)
- MaximumPayrollAmountType (Removed)
- NogaCodeType (Changed)
    - removed property "NOGASection"
    - fixed capitalization of property names
    - NOGACode is now mandatory
- NumberOfPersonsFemaleType (Removed)
- NumberOfPersonsMaleType (Removed)
- OfferBindingNatureType (Removed)
- OfferCustomerType (Changed)
    - Extracted generic customer information to separate property, referencing "CustomerType"
    - Added property "typeOfActivity"