@@ -8,56 +8,88 @@
       "maxSalary": 2500000.00,
       "payrollEmployees": {
         "payrollTotalEmployees": 500000,
-        "surplusPayrollTotal": 20000
+        "UVGPayrollMaleOA": 150000,
+        "UVGPayrollFemaleOA": 120000,
+        "UVGPayrollMaleNOA": 100000,
+        "UVGPayrollFemaleNOA": 80000,
+        "surplusPayrollTotal": 20000,
+        "surplusPayrollMaleOA": 5000,
+        "surplusPayrollFemaleOA": 3000,
+        "surplusPayrollMaleNOA": 4000,
+        "surplusPayrollFemaleNOA": 3000
       },
       "coverage": {
-      },
-      "premiumPersonGroup": {
-        "medicalExpensesPremiumRate": {
-          "totalPremiumRate": 5.000
+        "deathCapital": {
+          "deathCapitalUVGSalary": "3-fold",
+          "deathCapitalSurplus": "2-fold"
         },
-        "dailyAllowanceNetPremiumRateUVGSalary": {
-          "totalPremiumRate": 4.000
+        "subsequentPaymentsAfterDeath": true,
+        "disabilityCapital": {
+          "disabilityCapitalUVGSalary": "4-fold",
+          "disabilityCapitalSurplusSalary": "3-fold",
+          "disabilityCapitalProgUVGSalary": "225%",
+          "disabilityCapitalProgSurplusSalary": "225%"
         },
-        "dailyAllowanceSurplusSalaryNetPremiumRate": {
-          "totalPremiumRate": 3.500
+        "integrityCapital": true,
+        "dailyAllowance": {
+          "dailyAllowanceForUVGWaitingDaysUVGSalary": "90%",
+          "dailyAllowanceForUVGWaitingDaysSurplusSalary": "Not insured",
+          "waitingPeriodInDaysForDailyAllowanceUVGSalary": "1 (FL)",
+          "dailyAllowanceAfterExpiryWaitingPeriodUVGSalary": "5%",
+          "waitingPeriodInDaysForDailyAllowanceSurplusSalary": "365",
+          "dailyAllowanceAfterExpiryWaitingPeriodSurplusSalary": "100%",
+          "dailyAllowanceRelapsesLateEffectsUVG": "Insured for NOA-insured personnel",
+          "dailyAllowanceRelapsesLateEffectsUVGZ": "Insured"
         },
-        "dailyHospitalAllowancePremiumRate": 0.003,
-        "disabilityCapitalPremiumRateUVGSalary": {
-          "totalPremiumRate": 6.000
+        "dailyHospitalAllowance": {
+          "dailyHospitalAllowanceFixAmount": 100.00
         },
-        "disabilityCapitalSurplusSalaryPremiumRate": {
-          "totalPremiumRate": 5.500
+        "medicalExpensesHospital": {
+          "medicalExpensesHospitalType": "Private ward"
         },
-        "disabilityPensionPremiumRateUVGSalary": 0.004,
-        "disabilityPensionSalarySurplusPremiumRate": {
-          "totalPremiumRate": 4.500
+        "differentialCover": true,
+        "disabilityPension": {
+          "disabilityPensionSurplusSalary": "Analog UVG",
+          "disabilityPensionSurplusSalaryBenefitPeriod": "Until reference age"
         },
-        "deathCapitalPremiumRateUVGSalary": {
-          "totalPremiumRate": 7.000
+        "survivorsPension": {
+          "leftBehindPensionSurplusSalary": "Analog UVG",
+          "leftBehindPensionSurplusSalaryBenefitPeriod": "Until reference age"
         },
-        "deathCapitalSurplusSalaryPremiumRate": {
-          "totalPremiumRate": 6.500
-        },
-        "survivorsPensionSalaryPremiumRateUVGSalary": 0.005,
-        "survivorsPensionSalarySurplusPremiumRate": {
-          "totalPremiumRate": 5.000
-        },
-        "premiumDiffCoverage": 1000.00,
-        "UVGSalaryNetPremiumRate": {
-          "totalPremiumRate": 2.500
-        },
-        "surplusSalaryNetPremiumRate": {
-          "totalPremiumRate": 3.000
-        },
-        "premiumMinimumAmount": 50.00,
-        "finalPremiumPersonGroup": 1500.00
+        "survivorsPartnerPension": {
+          "survivorsPartnerPension": "Analog UVG",
+          "survivorsPartnerPensionUVGSalary": "Until reference age",
+          "survivorsPartnerPensionSurplusSalary": "Until reference age"
+        }
       }
     }
   ],
   "insuranceOptions": {
+    "dailyAllowanceContinuedPaymentIncreasesBeforIncapacity": true,
+    "startInsuranceCoverStartEmploymentContract": true,
+    "endInsuranceCoverCoorindationUVG": true,
+    "waiverBenefitGrossNegligence": true,
     "insuranceOptionsVarious": {
-      "typePayInstalment": "1/2 year"
+      "premiumRateGuaranty": true,
+      "renunciationTerminationRightClaim": true,
+      "annualCancellation": false,
+      "typePayInstalment": "1/2 year",
+      "surplusParticipation": true,
+      "surplusParticipationPremiumRate": 5.250,
+      "surplusParticipationRate": 10.500,
+      "surplusParticipationPeriodYears": 3,
+      "additionalOptions": [
+        {
+          "optionName": "Addtitional Insurance Option Bonus DSB",
+          "optionValue": "20000",
+          "optionDescription": "Bonus amount for no claims in 2 years for DSB"
+        },
+        {
+          "optionName": "Addtitional Insurance Option Bonus DSBM",
+          "optionValue": "DSBM",
+          "optionDescription": "Bonus amount for no claims in 2 years for DSB"
+        }
+      ]
     }
   },
   "previousInsurer": {
